@@ -1,3 +1,14 @@
+2008-11-06  Esteban Sanchez  <estebans@artica.es>
+
+	* include/js/integria_incident_search.js: Inventory search dialog is a
+	bit wider now. Added a check on inventory search to don't show
+	active incidents. It also shows more elements in a dialog.
+
+	* operation/inventories/inventory_search.php: It doesn't show active
+	incidents of an inventory object if the form is in a dialog.
+
+	* install.php: Removed login class on text inputs.
+
 2008-11-06  Jorge Gonzalez  <jorgegonz@artica.es>
 
 	* include/languages/es.mo, include/languages/es.po: Updated Spanish
